[package]
name = "rust-slackbot-html-to-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "stream"] }
dotenvy = "0.15"
dotenvy_macro = "0.15"
serde = { version = "1" }
serde_json = "1"
html2pdf = { git = "https://github.com/randommm/html2pdf.git" }
headless_chrome = "1"
