[package]
name = "rust-slackbot-html-to-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["multipart", "stream"] }
dotenvy = "0.15"
dotenvy_macro = "0.15"
serde = { version = "1" }
serde_json = "1"
html2pdf = { version = "0.7" }
headless_chrome = "1"
uuid = { version = "1.3", features = ["v4"] }
